--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 01 - JavaScript Drum Kit/index-FINISHED.html
 02 - JS and CSS Clock/index-FINISHED.html
 03 - CSS Variables/index-FINISHED.html
+04 - Array Cardio Day 1/index-FINISHED.html
