--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 02 - JS and CSS Clock/index-FINISHED.html
 03 - CSS Variables/index-FINISHED.html
 04 - Array Cardio Day 1/index-FINISHED.html
+05 - Flex Panel Gallery/index-FINISHED.html
