--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 03 - CSS Variables/index-FINISHED.html
 04 - Array Cardio Day 1/index-FINISHED.html
 05 - Flex Panel Gallery/index-FINISHED.html
+06 - Type Ahead/index-FINISHED.html
