--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 04 - Array Cardio Day 1/index-FINISHED.html
 05 - Flex Panel Gallery/index-FINISHED.html
 06 - Type Ahead/index-FINISHED.html
+07 - Array Cardio Day 2/index-FINISHED.html
