--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 05 - Flex Panel Gallery/index-FINISHED.html
 06 - Type Ahead/index-FINISHED.html
 07 - Array Cardio Day 2/index-FINISHED.html
+08 - Fun with HTML5 Canvas/index-FINISHED.html
