--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 06 - Type Ahead/index-FINISHED.html
 07 - Array Cardio Day 2/index-FINISHED.html
 08 - Fun with HTML5 Canvas/index-FINISHED.html
+09 - Dev Tools Domination/index-FINISHED.html
