--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,5 @@
 07 - Array Cardio Day 2/index-FINISHED.html
 08 - Fun with HTML5 Canvas/index-FINISHED.html
 09 - Dev Tools Domination/index-FINISHED.html
-10 - Custom Video Player/index-FINISHED.html
+11 - Hold Shift and Check Checkboxes/index-FINISHED.html
+12 - Key Sequence Detection/index-FINISHED.html
