--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 09 - Dev Tools Domination/index-FINISHED.html
 11 - Hold Shift and Check Checkboxes/index-FINISHED.html
 12 - Key Sequence Detection/index-FINISHED.html
+13 - Slide in on Scroll/index-FINISHED.html
