--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 11 - Hold Shift and Check Checkboxes/index-FINISHED.html
 12 - Key Sequence Detection/index-FINISHED.html
 13 - Slide in on Scroll/index-FINISHED.html
+14 - JavaScript References VS Copying/index-FINISHED.html
