--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 12 - Key Sequence Detection/index-FINISHED.html
 13 - Slide in on Scroll/index-FINISHED.html
 14 - JavaScript References VS Copying/index-FINISHED.html
+15 - LocalStorage/index-FINISHED.html
