--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@
 13 - Slide in on Scroll/index-FINISHED.html
 14 - JavaScript References VS Copying/index-FINISHED.html
 15 - LocalStorage/index-FINISHED.html
+16 - Mouse Move Shadow/index-FINISHED.html
