--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,5 @@
 14 - JavaScript References VS Copying/index-FINISHED.html
 15 - LocalStorage/index-FINISHED.html
 16 - Mouse Move Shadow/index-FINISHED.html
-16 - Sort Without Articles/index-FINISHED.html
+17 - Sort Without Articles/index-FINISHED.html
+18 - Adding Up Times with Reduce/index-FINISHED.html
