--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@
 16 - Mouse Move Shadow/index-FINISHED.html
 17 - Sort Without Articles/index-FINISHED.html
 18 - Adding Up Times with Reduce/index-FINISHED.html
+19 - Webcam Fun/index-FINISHED.html
