--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@
 17 - Sort Without Articles/index-FINISHED.html
 18 - Adding Up Times with Reduce/index-FINISHED.html
 19 - Webcam Fun/index-FINISHED.html
+20 - Speech Detection/index-FINISHED.html
