--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@
 18 - Adding Up Times with Reduce/index-FINISHED.html
 19 - Webcam Fun/index-FINISHED.html
 20 - Speech Detection/index-FINISHED.html
+21 - Geolocation/index-FINISHED.html
