--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@
 19 - Webcam Fun/index-FINISHED.html
 20 - Speech Detection/index-FINISHED.html
 21 - Geolocation/index-FINISHED.html
+22 - Follow Along Link Highlighter/index-FINISHED.html
