--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@
 20 - Speech Detection/index-FINISHED.html
 21 - Geolocation/index-FINISHED.html
 22 - Follow Along Link Highlighter/index-FINISHED.html
+23 - Speech Synthesis/index-FINISHED.html
