--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@
 21 - Geolocation/index-FINISHED.html
 22 - Follow Along Link Highlighter/index-FINISHED.html
 23 - Speech Synthesis/index-FINISHED.html
+24 - Sticky Nav/index-FINISHED.html
