--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@
 22 - Follow Along Link Highlighter/index-FINISHED.html
 23 - Speech Synthesis/index-FINISHED.html
 24 - Sticky Nav/index-FINISHED.html
+25 - Event Capture, Propagation, Bubbling and Once/index-FINISHED.html
