--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@
 23 - Speech Synthesis/index-FINISHED.html
 24 - Sticky Nav/index-FINISHED.html
 25 - Event Capture, Propagation, Bubbling and Once/index-FINISHED.html
+26 - Stripe Follow Along Nav/index-FINISHED.html
