--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@
 24 - Sticky Nav/index-FINISHED.html
 25 - Event Capture, Propagation, Bubbling and Once/index-FINISHED.html
 26 - Stripe Follow Along Nav/index-FINISHED.html
+27 - Click and Drag/index-FINISHED.html
