--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@
 25 - Event Capture, Propagation, Bubbling and Once/index-FINISHED.html
 26 - Stripe Follow Along Nav/index-FINISHED.html
 27 - Click and Drag/index-FINISHED.html
+28 - Video Speed Controller/index-FINISHED.html
