--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@
 26 - Stripe Follow Along Nav/index-FINISHED.html
 27 - Click and Drag/index-FINISHED.html
 28 - Video Speed Controller/index-FINISHED.html
+29 - Countdown Timer/index-FINISHED.html
