--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@
 27 - Click and Drag/index-FINISHED.html
 28 - Video Speed Controller/index-FINISHED.html
 29 - Countdown Timer/index-FINISHED.html
+30 - Whack A Mole/index-FINISHED.html
